<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_freshdesk_share"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.infobella.whatomail.whatomail.activity.ShareFreshdeskActivity">

    <CheckBox
        android:id="@+id/check_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_novo_ticket"
        android:textSize="16sp"
        android:layout_marginBottom="0dp"
        />

    <CheckBox
        android:id="@+id/check_controlado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_receita_controlada"
        android:textSize="16sp"
        android:layout_marginBottom="0dp"
        />

    <TextView
        android:id="@+id/label_nome_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/nome_cliente"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:labelFor="@+id/nome_cliente"/>

    <EditText
        android:id="@+id/nome_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/backgroudTextEdit"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="0dp"
        android:inputType="textCapWords"/>

    <TextView
        android:id="@+id/label_telefone_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/telefone_cliente"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:labelFor="@+id/telefone_cliente"/>

    <EditText
        android:id="@+id/telefone_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/backgroudTextEdit"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="0dp"
        android:inputType="number"/>

    <TextView
        android:id="@+id/label_ticket_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/numero_ticket"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:labelFor="@+id/ticket_id"/>

    <EditText
        android:id="@+id/ticket_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/backgroudTextEdit"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="0dp"
        android:inputType="number"/>

    <TextView
        android:id="@+id/label_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/arquivo_name"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"/>

    <TextView
        android:id="@+id/file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroudText"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="0dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/mensagem_ticket"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:labelFor="@+id/ticket_msg"/>

    <EditText
        android:id="@+id/ticket_msg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|start"
        android:background="@color/backgroudTextEdit"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        />

    <Button
        android:id="@+id/btn_freshdesk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_freshdesk"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>

</LinearLayout>
