<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.infobella.whatomail.whatomail.activity.MainActivity">

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        android:textAlignment="center"
        android:padding="20dp"/>

    <Button
        android:id="@+id/btn_veterynary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_veterinary"
        android:textAlignment="center"
        android:padding="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_gravity="bottom|end"
        android:gravity="bottom|end"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_answer"
            android:textAlignment="center"
            android:padding="20dp"/>

    </LinearLayout>

</LinearLayout>
