<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroudTextEdit"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginTop="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textSize="15sp"
                android:text="@string/list_answer_ticket"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/campo_answer_ticket"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginTop="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textSize="15sp"
                android:text="@string/list_answer_cliente"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/campo_answer_cliente"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginTop="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAlignment="textStart"
                android:text="@string/list_answer_text"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/campo_answer_text"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginTop="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAlignment="textStart"
                android:text="@string/list_answer_dthrReceived"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/campo_answer_dthrReceived"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginTop="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAlignment="textStart"
                android:text="@string/list_answer_dthrSent"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/campo_answer_dthrSent"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>