<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_veterinary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.infobella.whatomail.whatomail.activity.AddVeterinaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/veterinary_ddd"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/vet_ddd"
            android:layout_width="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/backgroudTextEdit"
            android:padding="5dp"
            android:maxLength="2"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:inputType="number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/veterinary_phone"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/vet_fone"
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/backgroudTextEdit"
            android:padding="5dp"
            android:maxLength="9"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:inputType="number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/veterinary_name"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/vet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/backgroudTextEdit"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:inputType="text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:layout_marginTop="100dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/btn_add_vet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add"
                android:textAlignment="center"
                android:padding="20dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>